fix content breaks on homepage

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -174,6 +174,9 @@ production stylesheet in assets/built/screen.css
 
 .has-cover .site-title {
     font-size: 6rem;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .site-header-content.left-aligned .site-title {
@@ -202,7 +205,7 @@ production stylesheet in assets/built/screen.css
 }
 
 :is(.site-logo, .site-title) + .site-description {
-    max-width: 640px;
+    max-width: 500px;
     margin-top: 16px;
     font-size: 2.4rem;
     font-weight: 400;
@@ -254,6 +257,9 @@ production stylesheet in assets/built/screen.css
     }
     .site-title {
         font-size: 3.4rem !important;
+        max-width: 320px !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
     .site-description {
         font-size: 2.2rem !important;
